--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,11 +1,32 @@
-.outer{
-    width: 100%;
-    background-color: #8CFFDB;
-    height: 100vh;
+.outer {
+  width: 100%;
+  background-color: black;
+  height: 100vh;
 }
 
-.con-inner{
-    border: 3px solid gray;
-    border-radius: 10px;
-    height: 95vh;
+.con-inner {
+  border: 3px solid white;
+  border-radius: 10px;
+  height: 95vh;
+}
+
+.game-outer {
+  height: 500px;
+}
+
+.game-board {
+  height: 580px;
+}
+
+.status {
+  color: whitesmoke;
+}
+
+@media only screen and (max-width: 600px) {
+  .game-board {
+    height: 330px;
+  }
+  .game-outer {
+    height: 300px;
+  }
 }
