--- a/src/components/PlayersMenu/PlayersMenu.css
+++ b/src/components/PlayersMenu/PlayersMenu.css
@@ -11,3 +11,9 @@ p{
     border-radius: 10px;
     text-decoration: underline;
 }
+
+@media only screen and (max-width: 600px) {
+    .player-buttons{
+        font-size: 15px;
+    }
+  }
